# g4me

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindHepMC3.cmake  FindPythia.cmake
share/: CMakeLists.txt
share/analysis/: Dmesons.C  angle.C  decay_electron.C  electron.C  hits.C  io.C  transmission.C
share/analysis/MUON/: muon.C
share/analysis/TOFRICH/: display.C  read.C  simpleAngle.C  tofrich_process.C
share/data/: rindex_tabata.C
share/g4macro/: fct.mac  gamma.mac  hepmc.mac  init.mac  momentum.loop  muon.mac  pythia8.mac  tofrich.detector.gap10cm.focusing.mac  tofrich.detector.gap10cm.mac  tofrich.detector.gap20cm.focusing.mac  tofrich.detector.gap20cm.mac  tofrich.detector.mac  tofrich.mac  tofrich.save.mac  tofrich.single.mac  vis_tofrich.mac
share/py8config/: pythia8_XeXe.cfg  pythia8_hf.cfg  pythia8_hi.cfg  pythia8_inel.cfg
share/smearing/: smearing.C
src/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  DetectorInfo.hh  EventAction.cc  EventAction.hh  ExternalDecayer.cc  ExternalDecayer.hh  ExternalDecayerPhysics.cc  ExternalDecayerPhysics.hh  GeneratorHepMC.cc  GeneratorHepMC.hh  GeneratorPythia8.cc  GeneratorPythia8.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  PrimaryParticleInformation.cc  PrimaryParticleInformation.hh  Pythia8.cc  Pythia8.hh  RootIO.cc  RootIO.hh  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  StackingAction.cc  StackingAction.hh  SteppingAction.cc  SteppingAction.hh  main.cc
src/ABSO/: DetectorConstruction.cc  DetectorConstruction.hh
src/EMCAL/: DetectorConstruction.cc  DetectorConstruction.hh
src/FCT/: DetectorConstruction.cc  DetectorConstruction.hh
src/TOFRICH/: DetectorConstruction.cc  DetectorConstruction.hh
src/geometry/: Common.hh
